--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -20,18 +20,20 @@
       <div class="mr-3 col-span-1 space-y-3 sm:space-y-4">
         <div class="flex justify-between grid grid-flow-col w-full">
           <div>
-            <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
-              <%= form.hidden_field :collection_id, name: :collection_id %>
-              <div class="grid grid-flow-col space-x-2 justify-items-start">
-                <div class="inline-flex">
+            <div class="grid grid-flow-col space-x-2 justify-items-start">
+              <div class="inline-flex">
+                <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+                  <%= form.hidden_field :collection_id, name: :collection_id %>
                   <%= form.text_field :order_number, name: :order_number, placeholder: "ID-თი ძიება", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-                <div class="inline-flex">
-                  <%= form.text_field :original_contents, name: :original_contents, placeholder: "ტექსტით ძიება", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-                <input type="submit" value="Submit">
+                <% end %>
               </div>
-            <% end %>
+              <div class="inline-flex">
+                <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+                  <%= form.hidden_field :collection_id, name: :collection_id %>
+                  <%= form.text_field :original_contents, name: :original_contents, placeholder: "ტექსტით ძიება", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                <% end %>
+              </div>
+            </div>
           </div>
           <div class="flex items-center">
             <div class="grid grid-flow-col items-end">
@@ -48,18 +50,20 @@
       <div class="ml-3 col-span-1 space-y-3 sm:space-y-4">
         <div class="flex justify-between grid grid-flow-col w-full">
           <div>
-            <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
-              <%= form.hidden_field :collection_id, name: :collection_id %>
-              <div class="grid grid-flow-col space-x-2 justify-items-start">
-                <div class="inline-flex">
+            <div class="grid grid-flow-col space-x-2 justify-items-start">
+              <div class="inline-flex">
+                <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+                  <%= form.hidden_field :collection_id, name: :collection_id %>
                   <%= form.text_field :order_number, name: :order_number, placeholder: "Search by ID", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-                <div class="inline-flex">
-                  <%= form.text_field :translation_contents, name: :translation_contents, placeholder: "Search by text", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                </div>
-                <input type="submit" value="Submit">
+                <% end %>
               </div>
-            <% end %>
+              <div class="inline-flex">
+                <%= form_for @search, url: edit_multiple_admin_text_blocks_path(collection_id: @collection.id), method: :get do |form| %>
+                  <%= form.hidden_field :collection_id, name: :collection_id %>
+                  <%= form.text_field :translation_contents, name: :translation_contents, placeholder: "Search by text", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                <% end %>
+              </div>
+            </div>
           </div>
           <div class="flex items-center">
             <div class="grid grid-flow-col items-end">
@@ -76,10 +80,11 @@
     </div>
 
 
-    <% @text_blocks.each do |block| %>
+    <% @text_blocks.group_by(&:order_number).each do |order_number, block_group| %>
       <div class="mt-3 flex justify-stretch grid grid-cols-2 grid-flow-col max-w-screen-2xl">
-        <div id="text-block-<%= block.id %>" class="col-span-1">
-          <% if block.original_id %>
+        <% ka_block = block_group.detect(&:ka?) %>
+        <div id="text-block-<%= ka_block&.id || SecureRandom.uuid %>" class="col-span-1">
+          <% if ka_block.present? %>
             <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
 
               <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
@@ -87,7 +92,7 @@
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
                       <div class="inline-flex">
-                        <%= "KA-#{block.order_number}" %>
+                        <%= "KA-#{order_number}" %>
                       </div>
                     </div>
                   </div>
@@ -105,7 +110,7 @@
                       </div>
                       <button type="button"
                               data-controller="delete-record"
-                              data-delete-record-url-value="<%= admin_text_block_path(id: block.original_id) %>"
+                              data-delete-record-url-value="<%= admin_text_block_path(id: ka_block.id) %>"
                               data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>"
                               data-action="click->delete-record#submit"
                               class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
@@ -116,9 +121,9 @@
                     </div>
                   </div>
                 </div>
-                <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.original_id), method: :put do |form| %>
+                <%= form_with model: [:admin, ka_block], url: admin_text_block_path(id: ka_block.id), method: :put do |form| %>
                   <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :original_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                    <%= form.text_area :contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
                     <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
@@ -130,17 +135,17 @@
 
             <div class="mr-3 mt-3 grid grid-flow-col justify-items-end">
               <div class="space-x-2 flex">
-                <%= button_to merge_admin_text_block_path(id: block.original_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to merge_admin_text_block_path(id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
                 <% end %>
-                <%= button_to swap_admin_text_block_path(id: block.original_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to swap_admin_text_block_path(id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 <% end %>
-                <%= button_to admin_text_blocks_path(last_text_block_id: block.original_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to admin_text_blocks_path(last_text_block_id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
@@ -150,9 +155,9 @@
           <% end %>
         </div>
 
-
-        <div id="text-block-<%= block.id %>" class="col-span-1">
-          <% if block.translation_id %>
+        <% en_block = block_group.detect(&:en?) %>
+        <div id="text-block-<%= en_block&.id || SecureRandom.uuid %>" class="col-span-1">
+          <% if en_block.present? %>
             <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500">
 
               <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
@@ -160,7 +165,7 @@
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
                       <div class="inline-flex">
-                        <%= "EN-#{block.order_number}" %>
+                        <%= "EN-#{order_number}" %>
                       </div>
                     </div>
                   </div>
@@ -178,7 +183,7 @@
                       </div>
                       <button type="button"
                               data-controller="delete-record"
-                              data-delete-record-url-value="<%= admin_text_block_path(id: block.translation_id) %>"
+                              data-delete-record-url-value="<%= admin_text_block_path(id: en_block.id) %>"
                               data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>"
                               data-action="click->delete-record#submit"
                               class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
@@ -189,10 +194,10 @@
                     </div>
                   </div>
                 </div>
-                <%= form_with model: [:admin, block], url: admin_text_block_path(id: block.translation_id), method: :put do |form| %>
+                <%= form_with model: [:admin, en_block], url: admin_text_block_path(id: en_block.id), method: :put do |form| %>
 
                   <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :translation_contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                    <%= form.text_area :contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
                     <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">Save</button>
@@ -203,17 +208,17 @@
 
             <div class="mt-3 grid grid-flow-col justify-items-end">
               <div class="flex space-x-2">
-                <%= button_to merge_admin_text_block_path(id: block.translation_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to merge_admin_text_block_path(id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
                 <% end %>
-                <%= button_to swap_admin_text_block_path(id: block.translation_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to swap_admin_text_block_path(id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 <% end %>
-                <%= button_to admin_text_blocks_path(last_text_block_id: block.translation_id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <%= button_to admin_text_blocks_path(last_text_block_id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
