--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -87,7 +87,7 @@
           <% if ka_block.present? %>
             <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
 
-              <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
+              <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -103,7 +103,9 @@
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                         </svg>
                       </div>
-                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div
+                        data-action="click->split-block#split"
+                        class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
@@ -123,7 +125,11 @@
                 </div>
                 <%= form_with model: [:admin, ka_block], url: admin_text_block_path(id: ka_block.id), method: :put do |form| %>
                   <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                    <%= form.text_area :contents,
+                                       name: "text_block[contents]",
+                                       rows: 8,
+                                       data: { 'split-block-target': 'textarea' },
+                                       class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
                     <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
@@ -160,7 +166,7 @@
           <% if en_block.present? %>
             <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500">
 
-              <div class="sm:items-start sm:gap-4 sm:py-3 w-full">
+              <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: en_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -176,7 +182,9 @@
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                         </svg>
                       </div>
-                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div
+                        data-action="click->split-block#split"
+                        class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
@@ -195,9 +203,12 @@
                   </div>
                 </div>
                 <%= form_with model: [:admin, en_block], url: admin_text_block_path(id: en_block.id), method: :put do |form| %>
-
                   <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :contents, name: "text_block[contents]", rows: 8, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                    <%= form.text_area :contents,
+                                       name: "text_block[contents]",
+                                       rows: 8,
+                                       data: { 'split-block-target': 'textarea' },
+                                       class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
                     <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">Save</button>
