--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -85,7 +85,7 @@
         <% ka_block = block_group.detect(&:ka?) %>
         <div id="text-block-<%= ka_block&.id || SecureRandom.uuid %>" class="col-span-1">
           <% if ka_block.present? %>
-            <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
+            <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500" data-controller="tag-term" data-tag-term-url-value="<%= tag_term_admin_text_block_path(id: ka_block.id) %>" data-tag-term-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
 
               <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
@@ -97,7 +97,9 @@
                     </div>
                   </div>
                   <div>
-                    <div class="grid grid-flow-col space-x-2 items-end">
+                    <div
+                      data-action="click->tag-term#tag"
+                      class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
@@ -128,7 +130,7 @@
                     <%= form.text_area :contents,
                                        name: "text_block[contents]",
                                        rows: 8,
-                                       data: { 'split-block-target': 'textarea' },
+                                       data: { 'split-block-target': 'textarea', 'tag-term-target': 'textarea' },
                                        class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
@@ -164,7 +166,7 @@
         <% en_block = block_group.detect(&:en?) %>
         <div id="text-block-<%= en_block&.id || SecureRandom.uuid %>" class="col-span-1">
           <% if en_block.present? %>
-            <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500">
+            <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500" data-controller="tag-term" data-tag-term-url-value="<%= tag_term_admin_text_block_path(id: en_block.id) %>" data-tag-term-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
 
               <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: en_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
@@ -176,7 +178,9 @@
                     </div>
                   </div>
                   <div>
-                    <div class="grid grid-flow-col space-x-2 items-end">
+                    <div
+                      data-action="click->tag-term#tag"
+                      class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
@@ -207,7 +211,7 @@
                     <%= form.text_area :contents,
                                        name: "text_block[contents]",
                                        rows: 8,
-                                       data: { 'split-block-target': 'textarea' },
+                                       data: { 'split-block-target': 'textarea', 'tag-term-target': 'textarea' },
                                        class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
